<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="30dp"
        android:gravity="top|center"
        android:text="LOGIN"
        android:textAlignment="center"
        android:textSize="70dp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        />


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="15"
        android:hint="@string/name"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"

        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:inputType="number"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:backgroundTint="@color/blue"
        android:background="@drawable/custom_login_button"
        android:text="@string/register"
        />

</LinearLayout>